--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+
 body {
   margin: 0;
   box-sizing: border-box;
   background-color: #333;
   color: #ffffff;
-  padding: 4rem;
+  padding: 4rem 4rem 0 4rem;
 }
 
 .navbar {
@@ -30,6 +36,12 @@ body {
 
 .nav-items li {
   justify-content: space-between;
+  font-size: 1.2rem;
+  margin-right: 3rem;
+}
+.nav-items li:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 .container {
@@ -107,4 +119,59 @@ body {
 .profile-description {
   font-size: 1.5rem;
   font-weight: 500;
+}
+
+footer {
+  margin-top: 3rem;
+  font-family: poppins;
+  display: flex;
+  color: #ffff;
+  width: 100%;
+  text-decoration: none;
+  text-align: center;
+  display: inline-block;
+  line-height: 1.95em;
+}
+
+@media (min-width: 1800px) {
+  body {
+    width: 60%;
+    margin: 0 auto;
+  }
+}
+
+/* Portrait and Landscape */
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
+  html {
+    font-size: 10px;
+  }
+
+  body {
+    padding: 1rem 0 0 4rem;
+  }
+  .container {
+    display: grid;
+  }
+
+  .text-container {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+
+  .description {
+    width: 70%;
+  }
+
+  .designer-card {
+    max-width: 200px;
+  }
+
+  .profile-card img {
+    max-width: 30px;
+  }
+}
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
+  .container {
+    display: grid;
+  }
 }
